# pytorch_devcontainer_project_template

./: .dockerignore  Dockerfile  LICENSE  mypy.ini  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.ipython/: 00_custom_prompt.py  ipython_config.py
my_project/: di.py  logs.py
my_project/cli/: hello_world.py
my_project/directories/: config.py  di.py  interface.py
my_project/printer/: di.py  impl.py  interface.py
nbs/: MNIST.ipynb  MNIST_ptl.ipynb  Pets.ipynb  PetsAndLandscapesDataset.ipynb  TestGPU.ipynb
