[tool.poetry]
name = "my-project"
version = "0.1.0"
description = ""
authors = ["Tomasz Maćkowiak <kurazu@kurazu.net>"]
license = "MIT"
readme = "README.md"
packages = [{include = "my_project"}]

[tool.poetry.dependencies]
python = "~3.10"
injector = "^0.20.1"
matplotlib = "^3.6.3"
numpy = "^1.24.1"
polars = "^0.15.15"
more-itertools = "^9.0.0"
returns = "^0.19.0"
pydantic = "^1.10.4"
click = "^8.1.3"
scikit-learn = "^1.2.0"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.11"
ipython = "^8.8.0"
isort = "^5.11.4"
black = "^22.12.0"
flake8 = "^6.0.0"
mypy = "^0.991"
jupyter = "^1.0.0"
notebook = "^6.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
